# django-create

./: .gitignore  README.md  pyproject.toml
django-create/: cli.py  utils.py
django-create/commands/: create_model.py
django-create/templates/: serializer_template.txt
django_create/: cli.py  utils.py
django_create/commands/: create_model.py  create_serializer.py  create_test.py  create_view.py  create_viewset.py  folderize_app.py
django_create/templates/: viewset_template.txt
tests/: test_create_model.py  test_create_serializer.py  test_create_test.py  test_create_view.py  test_create_viewset.py  test_folderize_app.py  test_utils.py
