[tool.poetry]
name = "django-create"
version = "0.1.0"
description = "A CLI tool to help Django developers create file templates."
authors = ["Jonathan Ribak <yonch.baalil@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "django_create" }
]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
